syntax = "proto3";

package edgekey;

option go_package = "github.com/fleanza74/test-proto/proto/edgekey";

message EdgeKeyRequest {
    string auth_token = 1;
    int64 timestamp = 2;
    string md5 = 3;
    string ip = 4;
    string user_agent = 5;
}

message EdgeKeyResponse {
    string key = 1;
}

service EdgeKeyService {
    rpc GenerateKey (EdgeKeyRequest) returns (EdgeKeyResponse) {}
}